# chip8-hs

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  chip8-hs.cabal
app/: Main.hs
docs/: GETTING_STARTED.md  IMPLEMENTATION_PLAN.md
src/Chip8/: Cpu.hs  Decode.hs  Emulator.hs  Execute.hs  Font.hs  Instruction.hs  Memory.hs  Peripherals.hs  Types.hs
test/: Main.hs
test/Test/Chip8/: Decode.hs  Emulator.hs  Execute.hs  Memory.hs  Types.hs
